--- a/Mazaady/Base.lproj/Main.storyboard
+++ b/Mazaady/Base.lproj/Main.storyboard
@@ -1,24 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3dS-yj-M5J">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Cart-->
+        <scene sceneID="yzM-cL-acy">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="4HF-l9-2ch" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="W7f-uy-Hdh">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="bfr-lg-Z3p"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Cart" image="cart" id="qQ1-aW-zgd"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NBe-xf-Dat" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="653" y="1172"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="8fP-Bf-eOy">
+            <objects>
+                <viewController id="Ejd-Ag-FpV" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pg1-Zc-Qje">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="2000"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="3OM-da-thz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" image="profile" id="kTF-Pd-QBG"/>
+                    <size key="freeformSize" width="393" height="2000"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8HX-BV-F3k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1138" y="-308"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="3Cd-dc-sj3">
+            <objects>
+                <tabBarController id="3dS-yj-M5J" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qTV-q3-EcL">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="7p7-HT-NcH" kind="relationship" relationship="viewControllers" id="8Vp-Ns-x4X"/>
+                        <segue destination="v0d-fi-dFs" kind="relationship" relationship="viewControllers" id="VVi-NO-nzb"/>
+                        <segue destination="Pe6-MV-fBx" kind="relationship" relationship="viewControllers" id="81K-fS-C3K"/>
+                        <segue destination="4HF-l9-2ch" kind="relationship" relationship="viewControllers" id="8wC-du-Q8X"/>
+                        <segue destination="Ejd-Ag-FpV" kind="relationship" relationship="viewControllers" id="0lh-bK-OlT"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jkB-Px-9am" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-221" y="-308"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7rY-H0-zkS">
+            <objects>
+                <viewController id="Pe6-MV-fBx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="O42-3a-FyC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="I04-a6-9Tt"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="shop" id="noK-tI-2Na"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qML-bV-gnh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-190" y="1096"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="HOl-mC-tic">
+            <objects>
+                <viewController id="7p7-HT-NcH" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fLM-US-kpt">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="B6n-zF-hYv"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="home" id="p2w-Ta-fbA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rGi-fx-eGi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1618" y="922"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="40Y-0p-o5v">
+            <objects>
+                <viewController id="v0d-fi-dFs" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Um-Wi-7Vs">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="aH4-vC-RRp"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Search" image="search" id="bbP-0Y-v8R"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LdK-7n-8J0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-902" y="1010"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cart" width="25" height="25"/>
+        <image name="home" width="24" height="25"/>
+        <image name="profile" width="25" height="25"/>
+        <image name="search" width="25" height="25"/>
+        <image name="shop" width="24" height="24"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
