--- a/Mazaady/Base.lproj/Main.storyboard
+++ b/Mazaady/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
                                 <rect key="frame" x="0.0" y="107" width="393" height="662"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="XTv-eG-F8q">
-                                        <rect key="frame" x="8" y="0.0" width="377" height="938.66666666666663"/>
+                                        <rect key="frame" x="8" y="0.0" width="377" height="1338.6666666666667"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pgh-7f-Jg0">
                                                 <rect key="frame" x="0.0" y="0.0" width="377" height="267.33333333333331"/>
@@ -364,22 +364,38 @@
                                                     <constraint firstItem="1pd-S2-Dia" firstAttribute="top" secondItem="Dqv-EU-QJ4" secondAttribute="top" id="y5b-Zr-ei5"/>
                                                 </constraints>
                                             </view>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u2X-al-xJK">
-                                                <rect key="frame" x="0.0" y="389.33333333333331" width="377" height="100"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z6e-ae-r7O">
+                                                <rect key="frame" x="0.0" y="389.33333333333326" width="377" height="500"/>
+                                                <subviews>
+                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u2X-al-xJK">
+                                                        <rect key="frame" x="8" y="0.0" width="361" height="500"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="500" id="F8n-vg-VMF"/>
+                                                        </constraints>
+                                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pid-jX-5Lu">
+                                                            <size key="itemSize" width="128" height="128"/>
+                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                        </collectionViewFlowLayout>
+                                                        <cells/>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="Ejd-Ag-FpV" id="cKB-P5-hSu"/>
+                                                            <outlet property="delegate" destination="Ejd-Ag-FpV" id="5DT-li-0c2"/>
+                                                        </connections>
+                                                    </collectionView>
+                                                </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="F8n-vg-VMF"/>
+                                                    <constraint firstAttribute="trailing" secondItem="u2X-al-xJK" secondAttribute="trailing" constant="8" id="0dG-RY-TAq"/>
+                                                    <constraint firstItem="u2X-al-xJK" firstAttribute="leading" secondItem="Z6e-ae-r7O" secondAttribute="leading" constant="8" id="5YJ-lM-hcZ"/>
+                                                    <constraint firstItem="u2X-al-xJK" firstAttribute="top" secondItem="Z6e-ae-r7O" secondAttribute="top" id="Ecw-Mp-Llj"/>
+                                                    <constraint firstAttribute="bottom" secondItem="u2X-al-xJK" secondAttribute="bottom" id="bGj-ac-dwT"/>
                                                 </constraints>
-                                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pid-jX-5Lu">
-                                                    <size key="itemSize" width="128" height="128"/>
-                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                </collectionViewFlowLayout>
-                                                <cells/>
-                                            </collectionView>
+                                            </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sOf-15-Qyz">
-                                                <rect key="frame" x="0.0" y="493.33333333333337" width="377" height="100"/>
+                                                <rect key="frame" x="0.0" y="893.33333333333337" width="377" height="100"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="Ndd-7V-3Ja"/>
@@ -397,7 +413,7 @@
                                                 </connections>
                                             </collectionView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lc3-KZ-tms">
-                                                <rect key="frame" x="0.0" y="597.33333333333337" width="377" height="341.33333333333337"/>
+                                                <rect key="frame" x="0.0" y="997.33333333333337" width="377" height="341.33333333333337"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Tags" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDe-ra-Z4B">
                                                         <rect key="frame" x="8" y="7.9999999999999929" width="64.666666666666671" height="117.33333333333331"/>
@@ -406,7 +422,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="F4G-mu-wuJ">
-                                                        <rect key="frame" x="8" y="133.33333333333326" width="361" height="200"/>
+                                                        <rect key="frame" x="8" y="133.33333333333348" width="361" height="200"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="200" id="WYO-cp-wqN"/>
@@ -473,6 +489,7 @@
                         <outlet property="followersLbl" destination="e5S-xU-1hg" id="yhc-jh-N9w"/>
                         <outlet property="followingLbl" destination="E3B-GX-Rdp" id="qvu-vM-cGc"/>
                         <outlet property="languageLbl" destination="Xxw-hN-ggl" id="Qlg-5s-lq6"/>
+                        <outlet property="productsHeight" destination="F8n-vg-VMF" id="5Mp-6O-ECW"/>
                         <outlet property="searchTxt" destination="1pd-S2-Dia" id="K6f-bw-og1"/>
                     </connections>
                 </viewController>
