--- a/Mazaady/Base.lproj/Main.storyboard
+++ b/Mazaady/Base.lproj/Main.storyboard
@@ -297,6 +297,7 @@
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1pd-S2-Dia" customClass="AnimatableTextField" customModule="IBAnimatable">
                                                         <rect key="frame" x="8" y="12" width="317" height="36"/>
                                                         <color key="backgroundColor" name="color_white"/>
+                                                        <color key="tintColor" name="color_main"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                         <userDefinedRuntimeAttributes>
@@ -347,7 +348,7 @@
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                <real key="value" value="4"/>
+                                                                <real key="value" value="8"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
