--- a/Mazaady/MVC/Profile/View/XIb/Products.xib
+++ b/Mazaady/MVC/Profile/View/XIb/Products.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="9vM-wj-Bor" customClass="ProductsCVC" customModule="Mazaady" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="172" height="383"/>
+            <rect key="frame" x="0.0" y="0.0" width="172" height="295"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Xm6-Qb-sDb">
-                <rect key="frame" x="0.0" y="0.0" width="172" height="383"/>
+                <rect key="frame" x="0.0" y="0.0" width="172" height="295"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eIm-xr-l0j" customClass="AnimatableView" customModule="IBAnimatable">
-                        <rect key="frame" x="0.0" y="0.0" width="172" height="383"/>
+                        <rect key="frame" x="0.0" y="0.0" width="172" height="295"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fu8-qV-Mwl" customClass="AnimatableImageView" customModule="IBAnimatable">
                                 <rect key="frame" x="4" y="4" width="164" height="100"/>
@@ -39,7 +39,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ec9-N5-1xu">
-                                <rect key="frame" x="4" y="108.00000000000001" width="164" height="192.33333333333337"/>
+                                <rect key="frame" x="4" y="108.00000000000001" width="164" height="185.33333333333337"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fya-Vy-YN8">
                                         <rect key="frame" x="0.0" y="0.0" width="164" height="17"/>
@@ -65,7 +65,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1SS-Kr-f6S">
-                                        <rect key="frame" x="0.0" y="59.333333333333343" width="164" height="69"/>
+                                        <rect key="frame" x="0.0" y="59.333333333333343" width="164" height="62"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Offer Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ep6-5G-83d">
                                                 <rect key="frame" x="0.0" y="0.0" width="164" height="12"/>
@@ -74,25 +74,25 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HAB-mr-m7O">
-                                                <rect key="frame" x="0.0" y="12" width="164" height="57"/>
+                                                <rect key="frame" x="0.0" y="12" width="164" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00.00 EGP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Es8-zf-XC7">
-                                                        <rect key="frame" x="0.0" y="0.0" width="63.666666666666664" height="57"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="63.666666666666664" height="50"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                         <color key="textColor" name="color_black"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e1T-Mw-yKH">
-                                                        <rect key="frame" x="63.666666666666679" y="0.0" width="100.33333333333331" height="57"/>
+                                                        <rect key="frame" x="63.666666666666679" y="0.0" width="100.33333333333331" height="50"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00.00 EGP" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CUK-pQ-ItP">
-                                                                <rect key="frame" x="23.000000000000004" y="22.666666666666657" width="54.333333333333343" height="12"/>
+                                                                <rect key="frame" x="23.000000000000004" y="19" width="54.333333333333343" height="12"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                                                 <color key="textColor" name="color_main"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qzy-f9-phK">
-                                                                <rect key="frame" x="23.000000000000004" y="28" width="54.333333333333343" height="1"/>
+                                                                <rect key="frame" x="23.000000000000004" y="24.666666666666657" width="54.333333333333343" height="1"/>
                                                                 <color key="backgroundColor" name="color_main"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="Clo-hh-XPJ"/>
@@ -113,7 +113,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="3yS-6b-ggD">
-                                        <rect key="frame" x="0.0" y="136.33333333333334" width="164" height="56"/>
+                                        <rect key="frame" x="0.0" y="129.33333333333334" width="164" height="56"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lot Starts In" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jJZ-sw-aQj">
                                                 <rect key="frame" x="0.0" y="0.0" width="164" height="12"/>
@@ -122,13 +122,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="mZg-FE-tm5" customClass="AnimatableStackView" customModule="IBAnimatable">
-                                                <rect key="frame" x="0.0" y="15.999999999999972" width="164" height="40"/>
+                                                <rect key="frame" x="0.0" y="16" width="164" height="40"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnw-WD-Hcz" customClass="AnimatableView" customModule="IBAnimatable">
                                                         <rect key="frame" x="0.0" y="0.0" width="52" height="40"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aB6-Ay-Vc7">
-                                                                <rect key="frame" x="21.666666666666668" y="5.6666666666666874" width="9" height="28.666666666666671"/>
+                                                                <rect key="frame" x="21.666666666666668" y="5.666666666666659" width="9" height="28.666666666666671"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g40-dw-NjB">
                                                                         <rect key="frame" x="0.0" y="0.0" width="9" height="14.333333333333334"/>
@@ -153,7 +153,7 @@
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                <real key="value" value="4"/>
+                                                                <real key="value" value="16"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
@@ -161,7 +161,7 @@
                                                         <rect key="frame" x="56" y="0.0" width="52" height="40"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="56x-6Q-pPa">
-                                                                <rect key="frame" x="21.333333333333329" y="5.6666666666666874" width="9.3333333333333357" height="28.666666666666671"/>
+                                                                <rect key="frame" x="21.333333333333329" y="5.666666666666659" width="9.3333333333333357" height="28.666666666666671"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G8b-J0-p91">
                                                                         <rect key="frame" x="0.0" y="0.0" width="9.3333333333333339" height="14.333333333333334"/>
@@ -185,7 +185,7 @@
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                <real key="value" value="4"/>
+                                                                <real key="value" value="16"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
@@ -193,7 +193,7 @@
                                                         <rect key="frame" x="112" y="0.0" width="52" height="40"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pIu-oE-xwP">
-                                                                <rect key="frame" x="20.666666666666657" y="5.6666666666666874" width="11" height="28.666666666666671"/>
+                                                                <rect key="frame" x="20.666666666666657" y="5.666666666666659" width="11" height="28.666666666666671"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSg-9G-y4G">
                                                                         <rect key="frame" x="0.0" y="0.0" width="11" height="14.333333333333334"/>
@@ -217,7 +217,7 @@
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                <real key="value" value="4"/>
+                                                                <real key="value" value="16"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
@@ -256,7 +256,7 @@
                     <constraint firstItem="eIm-xr-l0j" firstAttribute="top" secondItem="Xm6-Qb-sDb" secondAttribute="top" id="oOV-dq-5vQ"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="172" height="383"/>
+            <size key="customSize" width="172" height="295"/>
             <connections>
                 <outlet property="Dcell" destination="g40-dw-NjB" id="vMk-2N-gSt"/>
                 <outlet property="Hcell" destination="G8b-J0-p91" id="R0w-EA-OHh"/>
@@ -264,12 +264,13 @@
                 <outlet property="counterViewCell" destination="3yS-6b-ggD" id="JXf-3x-rKM"/>
                 <outlet property="currenPriceCell" destination="Es8-zf-XC7" id="H9K-B5-bsc"/>
                 <outlet property="imageCell" destination="fu8-qV-Mwl" id="VHZ-hJ-OyT"/>
+                <outlet property="normalPriceViewCell" destination="BlV-pi-zqk" id="979-2a-s5d"/>
                 <outlet property="offerPriceCell" destination="CUK-pQ-ItP" id="01F-LP-7JH"/>
                 <outlet property="offerViewCell" destination="1SS-Kr-f6S" id="lj5-aP-LxQ"/>
                 <outlet property="priceCell" destination="qx6-4J-jyn" id="vns-Rc-6nP"/>
                 <outlet property="titleCell" destination="Fya-Vy-YN8" id="lkW-mw-Znx"/>
             </connections>
-            <point key="canvasLocation" x="-10.687022900763358" y="77.112676056338032"/>
+            <point key="canvasLocation" x="-10.687022900763358" y="46.126760563380287"/>
         </collectionViewCell>
     </objects>
     <resources>
